# SNAKE

./: agent.py  model.py  pyproject.toml  snake_game.py  snake_gameai.py
SnakeAI/: model.pth
